test/libyul/yulSyntaxTests/eof/builtin_function_literal.yul
{
    auxdataloadn(x,1)
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// TypeError 7000: (6-18): Function "auxdataloadn" expects 1 arguments but got 2.
// TypeError 9114: (6-18): Function expects direct literals as arguments.
// DeclarationError 8198: (19-20): Identifier "x" not found.
